# substrate-collectables-workshop

./: .gitignore  Cargo.toml  LICENSE  README.md  _coverpage.md  _navbar.md  _sidebar.md  book.toml  check.sh  index.html  rustfmt.toml
0/: 0.0-introduction.md  0.1-setup.md  0.2-running-a-custom-node.md  0.3-interacting-with-your-node.md  0.4-common-patterns-moving-forward.md  1-setup.md  2-running-a-custom-node.md  3-interacting-with-your-node.md  4-common-patterns-moving-forward.md  common-patterns-moving-forward.md  glossary.md  interacting-with-your-node.md  introduction.md  running-a-custom-node.md  setup.md
1/: .1.1-creating-a-module.md.swp  0-introduction.md  1-creating-a-module.md  1.0-introduction.md  1.1-creating-a-module.md  1.2-creating-a-storage-value.md  1.2-simple-storage.md  1.3-storage-function.md  1.3-storing-a-value.md  1.4-storage-mapping.md  1.5-viewing-a-storage-mapping.md  1.6-storing-a-structure.md  1.7-viewing-a-structure.md  2-simple-storage.md  3-storage-mapping.md  4-storing-a-structure.md  5-viewing-a-structure.md  creating-a-module.md  creating-a-storage-value.md  introduction.md  storage-mapping.md  storing-a-structure.md  storing-a-value.md  viewing-a-storage-mapping.md  viewing-a-structure.md
2/: 0-introduction.md  1-generating-random-data.md  1-tracking-all-kitties.md  2-creating-an-event.md  2-owning-multiple-kitties.md  2-tracking-all-kitties.md  2.0-introduction.md  2.1-generating-random-data.md  2.2-creating-an-event.md  2.3-tracking-all-kitties.md  2.4-owning-multiple-kitties.md  2.5-viewing-multiple-kitties.md  2.6-refactoring-our-code.md  3-tracking-all-kitties.md  4-owning-multiple-kitties.md  4-viewing-multiple-kitties.md  (+11 more)
src/15/template/: Cargo.toml  README.md  template.diff
src/15/template/src/: impls.rs  lib.rs  tests.rs
src/3/source/: Cargo.toml  README.md  changes.diff
src/3/source/src/: lib.rs
(+712 files in other folders)
