[package]
name = "pallet-kitties"
version = "0.1.0"
description = "An NFT Marketplace for Kitties"
authors = ["Shawn Tabrizi <shawntabrizi@gmail.com>"]
homepage = "https://www.shawntabrizi.com/substrate-collectables-workshop/"
repository = "https://github.com/shawntabrizi/substrate-collectables-workshop"
edition = "2021"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.1", default-features = false, features = ["derive"] }
frame = { package = "polkadot-sdk-frame", version = "0.6.0", default-features = false, features = ["experimental", "runtime"] }

[features]
default = [ "std" ]
std = [ "codec/std", "frame/std", "scale-info/std" ]
try-runtime = []
